// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Table/TableSaveViewModal Custom description and public checkbox (using overrides) 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--modal is-visible iot--composed-modal"
    data-floating-menu-container={true}
    data-testid="TableSaveViewModal"
    onBlur={[Function]}
    onClick={[Function]}
    onClose={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    open={true}
    role="presentation"
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-modal="true"
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        <h3
          className="bx--modal-header__heading bx--type-beta"
        >
          Save new view
        </h3>
        <button
          aria-label="Close"
          className="bx--modal-close"
          onClick={[Function]}
          title="Close"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="bx--modal-close__icon"
            fill="currentColor"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <p
          className="iot--save-view-modal__body-text"
        >
          You can save the current view's settings including applied filters and search.
        </p>
        <form
          data-testid="TableSaveViewModal-form"
          onSubmit={[Function]}
        >
          <div
            className="bx--form-item bx--text-input-wrapper"
          >
            <label
              className="bx--label"
              htmlFor="save-view-modal-view-title"
            >
              View title
            </label>
            <div
              className="bx--text-input__field-outer-wrapper"
            >
              <div
                className="bx--text-input__field-wrapper"
                data-invalid={null}
              >
                <input
                  aria-describedby=""
                  className="bx--text-input"
                  data-testid="TableSaveViewModal-form-title-input"
                  disabled={false}
                  id="save-view-modal-view-title"
                  name="title"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <ul
            className="bx--accordion iot--save-view-modal__view-description bx--accordion--end"
          >
            <li
              className="bx--accordion__item"
              onAnimationEnd={[Function]}
            >
              <button
                aria-controls="accordion-item-1541"
                aria-expanded={false}
                className="bx--accordion__heading"
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="bx--accordion__arrow"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
                  />
                </svg>
                <div
                  className="bx--accordion__title"
                  dir="auto"
                >
                  4 active filters
                </div>
              </button>
              <div
                className="bx--accordion__content"
                id="accordion-item-1541"
              >
                <p>
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </li>
            <li
              className="bx--accordion__item"
              onAnimationEnd={[Function]}
            >
              <button
                aria-controls="accordion-item-1542"
                aria-expanded={false}
                className="bx--accordion__heading"
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="bx--accordion__arrow"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
                  />
                </svg>
                <div
                  className="bx--accordion__title"
                  dir="auto"
                >
                  1 hidden column
                </div>
              </button>
              <div
                className="bx--accordion__content"
                id="accordion-item-1542"
              >
                <p>
                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                </p>
              </div>
            </li>
          </ul>
          <fieldset
            className="bx--fieldset"
          >
            <div
              className="bx--form-item bx--checkbox-wrapper iot--save-view-modal__default-view-checkbox"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="bx--checkbox"
                data-testid="TableSaveViewModal-form-default-checkbox"
                disabled={false}
                id="save-view-modal-default-checkbox-label"
                name="isDefault"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="bx--checkbox-label"
                htmlFor="save-view-modal-default-checkbox-label"
                title={null}
              >
                <span
                  className="bx--checkbox-label-text"
                  dir="auto"
                >
                  Save as my default view
                </span>
              </label>
            </div>
            <div
              className="bx--form-item bx--checkbox-wrapper iot--save-view-modal__public-checkbox"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="bx--checkbox"
                data-testid="TableSaveViewModal-form-public-checkbox"
                disabled={true}
                id="save-view-modal-public-checkbox-label"
                name="isPublic"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="bx--checkbox-label"
                htmlFor="save-view-modal-public-checkbox-label"
                title={null}
              >
                <span
                  className="bx--checkbox-label-text"
                  dir="auto"
                >
                  Public view
                </span>
              </label>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="bx--modal-footer iot--composed-modal-footer bx--btn-set"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--secondary"
          data-testid="TableSaveViewModal-modal-secondary-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Cancel
        </button>
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--primary bx--btn--disabled"
          data-testid="TableSaveViewModal-modal-primary-button"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Save
        </button>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Table/TableSaveViewModal Custom form (using overrides) 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--modal is-visible iot--composed-modal"
    data-floating-menu-container={true}
    data-testid="TableSaveViewModal"
    onBlur={[Function]}
    onClick={[Function]}
    onClose={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    open={true}
    role="presentation"
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-modal="true"
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        <h3
          className="bx--modal-header__heading bx--type-beta"
        >
          Save new view
        </h3>
        <button
          aria-label="Close"
          className="bx--modal-close"
          onClick={[Function]}
          title="Close"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="bx--modal-close__icon"
            fill="currentColor"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <p
          className="iot--save-view-modal__body-text"
        >
          You can save whatever you want
        </p>
        <form>
          <div
            className="bx--form-item"
          >
            <label
              className="bx--label"
              htmlFor="myTextArea"
            >
              My custom form element
            </label>
            <div
              className="bx--text-area__wrapper"
              data-invalid={null}
            >
              <textarea
                aria-describedby={null}
                aria-invalid={null}
                className="bx--text-area"
                cols={50}
                disabled={false}
                id="myTextArea"
                onChange={[Function]}
                onClick={[Function]}
                placeholder={null}
                rows={4}
              />
            </div>
          </div>
        </form>
      </div>
      <div
        className="bx--modal-footer iot--composed-modal-footer bx--btn-set"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--secondary"
          data-testid="TableSaveViewModal-modal-secondary-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Cancel
        </button>
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--primary"
          data-testid="TableSaveViewModal-modal-primary-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Save
        </button>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Table/TableSaveViewModal Default with knobs 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--modal is-visible iot--composed-modal"
    data-floating-menu-container={true}
    data-testid="TableSaveViewModal"
    onBlur={[Function]}
    onClick={[Function]}
    onClose={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    open={true}
    role="presentation"
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-modal="true"
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        <h3
          className="bx--modal-header__heading bx--type-beta"
        >
          Save new view
        </h3>
        <button
          aria-label="Close"
          className="bx--modal-close"
          onClick={[Function]}
          title="Close"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="bx--modal-close__icon"
            fill="currentColor"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <p
          className="iot--save-view-modal__body-text"
        >
          You can save the current view's settings including applied filters and search.
        </p>
        <form
          data-testid="TableSaveViewModal-form"
          onSubmit={[Function]}
        >
          <div
            className="bx--form-item bx--text-input-wrapper"
          >
            <label
              className="bx--label"
              htmlFor="save-view-modal-view-title"
            >
              View title
            </label>
            <div
              className="bx--text-input__field-outer-wrapper"
            >
              <div
                className="bx--text-input__field-wrapper"
                data-invalid={null}
              >
                <input
                  aria-describedby=""
                  className="bx--text-input"
                  data-testid="TableSaveViewModal-form-title-input"
                  disabled={false}
                  id="save-view-modal-view-title"
                  name="title"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <p
            className="iot--save-view-modal__view-description"
          >
            Entities: 2 filters, Alerts: 3 filters
          </p>
          <fieldset
            className="bx--fieldset"
          >
            <div
              className="bx--form-item bx--checkbox-wrapper iot--save-view-modal__default-view-checkbox"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="bx--checkbox"
                data-testid="TableSaveViewModal-form-default-checkbox"
                disabled={false}
                id="save-view-modal-default-checkbox-label"
                name="isDefault"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="bx--checkbox-label"
                htmlFor="save-view-modal-default-checkbox-label"
                title={null}
              >
                <span
                  className="bx--checkbox-label-text"
                  dir="auto"
                >
                  Save as my default view
                </span>
              </label>
            </div>
            <div
              className="bx--form-item bx--checkbox-wrapper iot--save-view-modal__public-checkbox"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="bx--checkbox"
                data-testid="TableSaveViewModal-form-public-checkbox"
                disabled={false}
                id="save-view-modal-public-checkbox-label"
                name="isPublic"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="bx--checkbox-label"
                htmlFor="save-view-modal-public-checkbox-label"
                title={null}
              >
                <span
                  className="bx--checkbox-label-text"
                  dir="auto"
                >
                  Public view
                </span>
              </label>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="bx--modal-footer iot--composed-modal-footer bx--btn-set"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--secondary"
          data-testid="TableSaveViewModal-modal-secondary-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Cancel
        </button>
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--primary bx--btn--disabled"
          data-testid="TableSaveViewModal-modal-primary-button"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Save
        </button>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Table/TableSaveViewModal Prefilled 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--modal is-visible iot--composed-modal"
    data-floating-menu-container={true}
    data-testid="TableSaveViewModal"
    onBlur={[Function]}
    onClick={[Function]}
    onClose={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    open={true}
    role="presentation"
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-modal="true"
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        <h3
          className="bx--modal-header__heading bx--type-beta"
        >
          Save new view
        </h3>
        <button
          aria-label="Close"
          className="bx--modal-close"
          onClick={[Function]}
          title="Close"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="bx--modal-close__icon"
            fill="currentColor"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <p
          className="iot--save-view-modal__body-text"
        >
          You can save the current view's settings including applied filters and search.
        </p>
        <form
          data-testid="TableSaveViewModal-form"
          onSubmit={[Function]}
        >
          <div
            className="bx--form-item bx--text-input-wrapper"
          >
            <label
              className="bx--label"
              htmlFor="save-view-modal-view-title"
            >
              View title
            </label>
            <div
              className="bx--text-input__field-outer-wrapper"
            >
              <div
                className="bx--text-input__field-wrapper"
                data-invalid={null}
              >
                <input
                  aria-describedby=""
                  className="bx--text-input"
                  data-testid="TableSaveViewModal-form-title-input"
                  disabled={false}
                  id="save-view-modal-view-title"
                  name="title"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="text"
                  value="My view 1"
                />
              </div>
            </div>
          </div>
          <p
            className="iot--save-view-modal__view-description"
          />
          <fieldset
            className="bx--fieldset"
          >
            <div
              className="bx--form-item bx--checkbox-wrapper iot--save-view-modal__default-view-checkbox"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="bx--checkbox"
                data-testid="TableSaveViewModal-form-default-checkbox"
                disabled={false}
                id="save-view-modal-default-checkbox-label"
                name="isDefault"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="bx--checkbox-label"
                htmlFor="save-view-modal-default-checkbox-label"
                title={null}
              >
                <span
                  className="bx--checkbox-label-text"
                  dir="auto"
                >
                  Save as my default view
                </span>
              </label>
            </div>
            <div
              className="bx--form-item bx--checkbox-wrapper iot--save-view-modal__public-checkbox"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="bx--checkbox"
                data-testid="TableSaveViewModal-form-public-checkbox"
                disabled={false}
                id="save-view-modal-public-checkbox-label"
                name="isPublic"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="bx--checkbox-label"
                htmlFor="save-view-modal-public-checkbox-label"
                title={null}
              >
                <span
                  className="bx--checkbox-label-text"
                  dir="auto"
                >
                  Public view
                </span>
              </label>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="bx--modal-footer iot--composed-modal-footer bx--btn-set"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--secondary"
          data-testid="TableSaveViewModal-modal-secondary-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Cancel
        </button>
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--primary"
          data-testid="TableSaveViewModal-modal-primary-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Save
        </button>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;
